<resources>
    <string name="app_name">有云简历</string>
    <string name="app_about">无需联网&#160;&#160;完善预览</string>
    <string name="app_about2">可选同步&#160;&#160;有云简历</string>
    <string name="app_crash">App发生异常，请重启</string>
    <string name="app_exit">再按一次退出</string>
    <string name="app_download">正在下载 有云简历 \u2026</string>
    <string name="app_declare1">特别声明</string>
    <string name="app_declare2">联系我们</string>
    <string name="app_declare3">●&#160;本软件平台上的大部分内容来源于网络，包括文字，图片等，我们提供的内容将服务使用者用于个人学习、参考或欣赏，以及其他非商业性或非盈利性用途。</string>
    <string name="app_declare4">●&#160;若有内容侵犯了原作者的权利或原作者不愿意在本软件平台上展示内容，请及时通知并联系我们，将予以删除。</string>
    <string name="app_declare5">●&#160;我们郑重承诺:&#160;严格保密用户同步的数据，保证用户数据隐私安全。</string>
    <string name="check_network">网络异常，请检查!</string>
    <string name="en_nodata">暂无数据</string>
    <string name="timeout_network">网络请求数据超时!</string>
    <string name="request_error">请求异常，请检查!</string>
    <string name="app_server_error">因服务器升级维护，请稍后重试，敬请大家谅解！</string>
    <string name="reload_network">重新加载</string>
    <string name="resume_baseinfo">基本资料</string>
    <string name="resume_workexperience">工作经历</string>
    <string name="resume_workexperience2">工作/实习经历</string>
    <string name="resume_project_experience">项目经验</string>
    <string name="resume_industrytype">行业类别</string>
    <string name="resume_profession">职业类别</string>
    <string name="resume_jobintension">求职意向</string>
    <string name="resume_evaluation">自我评价</string>
    <string name="resume_excellentskills">擅长技能</string>
    <string name="resume_education">教育背景</string>
    <string name="resume_training">培训经历</string>
    <string name="resume_educationtraining">教育/培训经历</string>
    <string name="resume_otherinfo">附加信息</string>
    <string name="resume_message">留言板</string>
    <string name="resume_makemywords">我的留言，自己来定\u2026</string>
    <string name="resume_mywords">&#160;&#160;&#160;&#160;我坚信在贵公司，我将学到更多知识，发挥出个人的最大效益。</string>
    <string name="resume_thinks">谢谢</string>
    <string name="resume_exit">退出预览</string>
    <string name="resume_home">首页</string>
    <string name="resume_center">有云简历</string>
    <string name="make_resume">定制我的简历</string>
    <string name="review_resume">预&#160;&#160;览</string>
    <string name="edit_resume">编&#160;&#160;辑</string>
    <string name="item_text1">请选择背景色</string>
    <string name="item_text11">(简历预览界面)</string>
    <string name="item_text2">热门简历预览</string>
    <string name="item_text21">更多</string>
    <string name="item_text3">相关话题推荐</string>
    <string name="item_text31">全部话题</string>
    <string name="item_text4">说说面试心得</string>
    <string name="item_text41">我来说</string>
    <string name="item_text42">暂无面试心得分享</string>
    <string name="item_text43">正在加载，请稍后\u2026</string>
    <string name="item_text44">正在更新，请稍后\u2026</string>
    <string name="item_text5">抱歉!该模块需求联网~</string>
    <string name="item_text6">简历预览封面</string>
    <string name="item_text61">简历封面</string>
    <string name="item_text7">提交成功，感谢您的分享~</string>
    <string name="item_text71">更多分享</string>
    <string name="item_text72">暂无分享，快去分享你的面试心得~</string>
    <string name="item_text8">我也来分享\u2026</string>
    <string name="item_text81">请分享面试心得或职场相关的信息</string>
    <string name="item_text82">分享内容最多为512字</string>
    <string name="item_share_status1">公开</string>
    <string name="item_share_status2">不公开</string>
    <string name="item_text9">收藏成功</string>
    <string name="item_text91">取消收藏</string>
    <string name="item_text100">正在下载，请稍后\u2026</string>
    <string name="item_text111">正在加载，请稍后\u2026</string>
    <string name="item_text101">简历封面预览</string>
    <string name="item_cover_local">本地</string>
    <string name="item_cover_update">更多</string>
    <string name="action_settings">设置</string>
    <string name="settings_item0">简历预览界面</string>
    <string name="settings_item1">每次启动预览模式</string>
    <string name="settings_item11">简历预览切换效果</string>
    <string name="settings_item2">自动切换简历预览</string>
    <string name="settings_item20">自动切换预览间隔</string>
    <string name="settings_item201">3秒</string>
    <string name="settings_item202">5秒</string>
    <string name="settings_item203">7秒</string>
    <string name="settings_item204">9秒</string>
    <string name="settings_item205">11秒</string>
    <string name="settings_item206">15秒</string>
    <string name="settings_item22">简历预览切换动画</string>
    <string name="settings_item21">预览界面编辑模式</string>
    <string name="settings_item3">检测新版本</string>
    <string name="settings_item31">暂无新版本</string>
    <string name="settings_item4">反馈意见</string>
    <string name="settings_item5">同步当前数据</string>
    <string name="settings_item51">管理当前栏目</string>
    <string name="settings_item6">关于我们</string>
    <string name="settings_item7">向好友分享</string>
    <string name="settings_item71">分享</string>
    <string name="settings_item72">有云简历已上线App市场，请前往搜索 “有云简历”即可;关于App使用中有任何问题，请到设置-意见反馈里提交问题。</string>
    <string name="settings_item8">清除本地缓存</string>
    <string name="settings_item9">编辑自动同步</string>
    <string name="action_login_head">请先登录</string>
    <string name="action_syncing">正在同步，请稍后\u2026</string>
    <string name="action_sync_success">同步成功</string>
    <string name="action_sync_fail">同步失败，请重试</string>
    <string name="completion_info_frist">请先完善资料</string>
    <string name="action_clearcache_success">已成功清除缓存</string>
    <string name="action_syncing_lang">正在同步语言能力，请稍后\u2026</string>
    <string name="action_syncing_cert">正在同步证书信息，请稍后\u2026</string>
    <string name="action_syncing_other">正在同步其他信息，请稍后\u2026</string>
    <string name="viewpager_indicator">%1$d/%2$d</string>
    <string name="feedback_ed_1">请尽详细地描述您的反馈问题或用户体验不足之处，以帮助我们改善产品体验，我们将尽快处理你的意见，谢谢~</string>
    <string name="feedback_info_1">意见描述</string>
    <string name="feedback_ed_2">请留下您的QQ/微信/邮箱(选填)</string>
    <string name="feedback_info_2">联系方式</string>
    <string name="feedback_ed_3">感谢您的反馈</string>
    <string name="feedback_info_3">您的反馈成功，我们将尽快处理你的意见，谢谢~</string>
    <string name="feedback_info_4">发送错误报告</string>
    <string name="contactus_phone_show">手&#160;&#160;机:&#160;&#160;13667258212</string>
    <string name="contactus_phone_hide">手&#160;&#160;机:&#160;&#160;******&#160;(登录可见)</string>
    <string name="contactus_weixin">微信:ppp_cj_qqq</string>
    <string name="contactus_weixin_name">ppp_cj_qqq</string>
    <string name="contactus_qq">QQ群:</string>
    <string name="contactus_qq_name">345939441</string>
    <string name="contactus_qq_name_note">&#160;QQ群(用户内测群)</string>
    <string name="contactus_copy_ok">已复制到粘贴板，欢迎加群~</string>
    <string name="contactus_copy_ok2">已复制到粘贴板~</string>
    <string name="action_user_login">用户登录</string>
    <string name="action_user_regist">快速注册</string>
    <string name="action_login">登&#160;&#160;录</string>
    <string name="action_register">立即加入</string>
    <string name="action_loging">登录中\u2026</string>
    <string name="action_login_savepwd">保存密码</string>
    <string name="action_loginresetpwd">重置密码</string>
    <string name="action_login_findgotpwd">找回密码</string>
    <string name="action_login_updatepwd">更新密码</string>
    <string name="action_login_3pl">其他登录方式</string>
    <string name="action_input_isnull">不能为空</string>
    <string name="action_input_up_isnull">用户名/手机号/邮箱或密码不能为空</string>
    <string name="action_input_username_null">用户名</string>
    <string name="action_input_usename_cn">用户名不能含中文</string>
    <string name="action_input_up_phone_email">手机号或邮箱用于找回密码，请选填</string>
    <string name="action_input_username_isnull">手机号/邮箱</string>
    <string name="action_input_username_toolong">用户名太长!</string>
    <string name="action_input_password_isnull">密码</string>
    <string name="action_input_newpassword_isnull">新密码</string>
    <string name="action_input_password_equal">两次密码不一致!</string>
    <string name="action_input_password_toolong">密码不能超过30位</string>
    <string name="register_repeatedusername">用户名，手机号或邮箱已存在</string>
    <string name="register_username_noexist">该用户名或手机号未注册，请重试!</string>
    <string name="new_password">请记住您的新密码:</string>
    <string name="action_wait_loging">正在登录，请稍后\u2026</string>
    <string name="action_wait_loginsuccess">登录成功，正在跳转\u2026</string>
    <string name="action_wait_reging">正在注册，请稍后\u2026</string>
    <string name="action_wait_regsuccess">注册成功，正在跳转\u2026</string>
    <string name="action_login_error"> 用户名或密码不正确，请重试!</string>
    <string name="login_input_hint">请输入用户名/手机号/邮箱</string>
    <string name="register_input_hint">请输入用户名</string>
    <string name="login_input1_hint">请输入手机号/邮箱</string>
    <string name="register_input2_hint">请输入手机号(用于找回密码)</string>
    <string name="register_input3_hint">请输入邮箱(用于找回密码)</string>
    <string name="login_input_pwd_hint">请输入登录密码</string>
    <string name="login_input_old_pwd_hint">请输入原密码</string>
    <string name="login_input_new_pwd_hint">请输入新密码</string>
    <string name="login_input_snew_pwd_hint">请确认新密码</string>
    <string name="login_input_updatepwd_success">密码修改成功，请记住您的新密码~</string>
    <string name="action_regist_fail">注册失败，请重试!</string>
    <string name="register_protocol">同意《用户注册服务协议》</string>
    <string name="register_agress_protocol">请先同意《用户注册服务协议》</string>
    <string name="protocol_title">《用户注册服务协议》</string>
    <string name="register_warn">提示:每个用户只能注册一次，请注意同步资料！ 若想重新注册，请清除App缓存或者到设置界面进行清除本地缓存操作。</string>
    <string name="account_go_login">已有账号，登录>></string>
    <string name="action_logout">退出登录</string>
    <string name="action_logout_success">注销成功</string>
    <string name="action_logout_fail">注销失败，请重试</string>
    <string name="action_no_login">未登录</string>
    <string name="action_login_fail">登录失败，请重试</string>
    <string name="errcode_success">发送成功</string>
	<string name="errcode_cancel">发送取消</string>
    <string name="action_submit">提&#160;&#160;交</string>
    <string name="show_button_sure">确&#160;&#160;认</string>
    <string name="tag_time_between">至</string>
    <string name="we_info_choose_worktime2">请选择</string>
    <string name="ed_info_time">时&#160;&#160;间</string>
    <string name="ed_info_input_time">请选择时间</string>
    <string name="ed_info_school">学校名称</string>
    <string name="ed_info_input_school">请输入学校名称</string>
    <string name="ed_info_isexamination">是否统招</string>
    <string name="ed_info_isexamination_1">是</string>
    <string name="ed_info_isexamination_2">否</string>
    <string name="ed_info_majorname">专业名称</string>
    <string name="ed_info_choose_majorname">请选择专业名称</string>
    <string name="ed_info_degree">学历/学位</string>
    <string name="ed_info_choose_degree">请选择学历/学位</string>
    <string name="ot_add">新增</string>
    <string name="ot_save">保存</string>
    <string name="ot_languages">语言能力</string>
    <string name="ot_certificate">获得证书</string>
    <string name="ot_info">其他信息</string>
    <string name="ot_info_language">外语语种</string>
    <string name="ot_info_choose_language">请选择外语语种</string>
    <string name="ot_info_literacyskills">读写能力</string>
    <string name="ot_info_choose_literacyskills">请选择读写能力</string>
    <string name="ot_info_listeningspeaking">听说能力</string>
    <string name="ot_info_choose_listeningspeaking">请选择听说能力</string>
    <string name="ot_info_certificate">证书名称</string>
    <string name="ot_info_input_certificate">请选择证书</string>
    <string name="ot_info_getcertificatetime">获得时间</string>
    <string name="ot_info_choose_getcertificatetime">请选择获得时间</string>
    <string name="ot_info_title">标&#160;&#160;题</string>
    <string name="ot_info_choose_title">请选择标题</string>
    <string name="ot_info_description">描&#160;&#160;述</string>
    <string name="ot_info_input_description">请输入描述信息(限512字)</string>
    <string name="pe_info_projectname">项目名称</string>
    <string name="pe_input_projectname">请输入项目名称</string>
    <string name="pe_info_time">时&#160;&#160;间</string>
    <string name="pe_info_workduties">项目职责</string>
    <string name="pe_input_workduties">请输入项目职责(限500字)</string>
    <string name="pe_info_workdesc">项目描述</string>
    <string name="pe_input_workdesc">请输入项目描述(限2000字)</string>
</resources>