<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/white">

    <com.me.resume.views.CommScrollView
        style="@style/comm_scrollview_style">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:background="@color/white"
            android:orientation="vertical" >

            <LinearLayout style="@style/noraml_item" >

                <TextView
                    style="@style/user_info_item_tv"
                    android:text="@string/pe_info_projectname" />

                <EditText
                    android:id="@+id/info_projectname"
                    style="@style/user_info_item_ed"
                    android:hint="@string/pe_input_projectname" />

                <ImageView
                    style="@style/user_info_item_iv"
                    android:visibility="invisible" />
            </LinearLayout>

            <View style="@style/line_padding10" />

             <LinearLayout
                android:id="@+id/llout03"
                style="@style/noraml_item" >

                <TextView
                    style="@style/user_info_item_tv"
                    android:text="@string/pe_info_time" />

                <LinearLayout
                    android:layout_width="0dip"
                    android:layout_height="match_parent"
                    android:layout_weight="7"
                    android:orientation="horizontal" >

                    <TextView
                        android:id="@+id/info_startworktime"
                        style="@style/user_info_item_ed"
                        android:layout_weight="3.5"
                        android:hint="@string/we_info_choose_worktime2" />

                    <TextView
                        style="@style/user_info_item_ed"
                        android:layout_marginLeft="2dip"
                        android:layout_weight="1"
                        android:text="@string/tag_time_between" />

                    <TextView
                        android:id="@+id/info_endworktime"
                        style="@style/user_info_item_ed"
                        android:layout_marginLeft="0dip"
                        android:layout_weight="3.5"
                        android:hint="@string/we_info_choose_worktime2" />
                </LinearLayout>
            </LinearLayout>

            <View style="@style/line_padding10" />

            <LinearLayout
                android:id="@+id/llout02"
                style="@style/noraml_item_mul" >

                <TextView
                    style="@style/user_info_item_tv"
                    android:text="@string/pe_info_workduties" />

                <EditText
                    android:id="@+id/info_workduties"
                    style="@style/user_info_item_ed"
                    android:singleLine="false"
                    android:hint="@string/pe_input_workduties" />

                <ImageView
                    style="@style/user_info_item_iv"
                    android:visibility="invisible" />
            </LinearLayout>

            <View style="@style/line_padding10" />

            <LinearLayout style="@style/noraml_item_mul" >

                <TextView
                    style="@style/user_info_item_tv"
                    android:text="@string/pe_info_workdesc" />

                <EditText
                    android:id="@+id/input_workdesc"
                    style="@style/user_info_item_ed"
                    android:hint="@string/pe_input_workdesc"
                    android:singleLine="false" />

                <ImageView
                    style="@style/user_info_item_iv"
                    android:visibility="invisible" />
            </LinearLayout>

            <View style="@style/line_padding10" />

        </LinearLayout>
    </com.me.resume.views.CommScrollView>

</RelativeLayout>