<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/white"
    android:fitsSystemWindows="true">

    <include
        android:id="@+id/top"
        android:layout_width="fill_parent"
        android:layout_height="@dimen/top_bar_height"
        layout="@layout/top_layout_lable" />

    <com.me.resume.views.CommScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_below="@id/top"
        android:fadingEdge="none"
        android:fadingEdgeLength="0dp"
        android:overScrollMode="never"
        android:scrollbars="none" >

        <LinearLayout
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical" >

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="45dip"
                android:background="@color/grey_50"
                android:orientation="horizontal" >

                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:layout_weight="1"
                    android:gravity="center|left"
                    android:padding="5dip"
                    android:text="@string/ot_languages"
                    android:textColor="@color/black"
                    android:textSize="@dimen/small_middle_text_size" />

                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:layout_weight="2"
                    android:gravity="center"
                    android:padding="5dip"
                    android:text="@string/ot_add"
                    android:textColor="@color/black"
                    android:textSize="@dimen/small_text_size" />

                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:layout_weight="2"
                    android:gravity="center"
                    android:padding="5dip"
                    android:text="@string/ot_save"
                    android:textColor="@color/black"
                    android:textSize="@dimen/small_text_size" />
            </LinearLayout>

            <View style="@style/line3" />

            <LinearLayout
                style="@style/noraml_item" >

                <TextView
                    style="@style/user_info_item_tv"
                    android:text="@string/ot_info_language" />

                <TextView
                    android:id="@+id/info_language"
                    style="@style/user_info_item_ed"
                    android:hint="@string/ot_info_choose_language" />

                <ImageView
                    style="@style/user_info_item_iv"
                    android:visibility="visible" />
            </LinearLayout>

            <View style="@style/line3" />

            <LinearLayout style="@style/noraml_item" >

                <TextView
                    style="@style/user_info_item_tv"
                    android:text="@string/ot_info_literacyskills" />

                <TextView
                    android:id="@+id/info_literacyskills"
                    style="@style/user_info_item_ed"
                    android:hint="@string/ot_info_choose_literacyskills" />

                <ImageView
                    style="@style/user_info_item_iv"
                    android:visibility="visible" />
            </LinearLayout>

            <View style="@style/line3" />

            <LinearLayout style="@style/noraml_item" >

                <TextView
                    style="@style/user_info_item_tv"
                    android:text="@string/ot_info_listeningspeaking" />

                <TextView
                    android:id="@+id/info_listeningspeaking"
                    style="@style/user_info_item_ed"
                    android:hint="@string/ot_info_choose_listeningspeaking" />

                <ImageView
                    style="@style/user_info_item_iv"
                    android:visibility="visible" />
            </LinearLayout>

            <View style="@style/line3" />

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="45dip"
                android:background="@color/grey_50"
                android:orientation="horizontal" >

                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:layout_weight="1"
                    android:gravity="center|left"
                    android:padding="5dip"
                    android:text="@string/ot_certificate"
                    android:textColor="@color/black"
                    android:textSize="@dimen/small_middle_text_size" />

                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:layout_weight="2"
                    android:gravity="center"
                    android:padding="5dip"
                    android:text="@string/ot_add"
                    android:textColor="@color/black"
                    android:textSize="@dimen/small_text_size" />

                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:layout_weight="2"
                    android:gravity="center"
                    android:padding="5dip"
                    android:text="@string/ot_save"
                    android:textColor="@color/black"
                    android:textSize="@dimen/small_text_size" />
            </LinearLayout>

            <View style="@style/line3" />

            <LinearLayout style="@style/noraml_item" >

                <TextView
                    style="@style/user_info_item_tv"
                    android:text="@string/ot_info_certificate" />

                <EditText
                    android:id="@+id/info_certificate"
                    style="@style/user_info_item_ed"
                    android:hint="@string/ot_info_input_certificate" />

                <ImageView
                    style="@style/user_info_item_iv"
                    android:visibility="visible" />
            </LinearLayout>

            <View style="@style/line3" />

            <LinearLayout style="@style/noraml_item" >

                <TextView
                    style="@style/user_info_item_tv"
                    android:text="@string/ot_info_getcertificatetime" />

                <EditText
                    android:id="@+id/info_certificatetime"
                    style="@style/user_info_item_ed"
                    android:hint="@string/ot_info_choose_getcertificatetime" />

                <ImageView
                    style="@style/user_info_item_iv"
                    android:visibility="invisible" />
            </LinearLayout>

            <View style="@style/line3" />

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="45dip"
                android:background="@color/grey_50"
                android:orientation="horizontal" >

                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:layout_weight="1"
                    android:gravity="center|left"
                    android:padding="5dip"
                    android:text="@string/ot_info"
                    android:textColor="@color/black"
                    android:textSize="@dimen/small_middle_text_size" />

                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:layout_weight="2"
                    android:gravity="center"
                    android:padding="5dip"
                    android:text="@string/ot_add"
                    android:textColor="@color/black"
                    android:textSize="@dimen/small_text_size" />

                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:layout_weight="2"
                    android:gravity="center"
                    android:padding="5dip"
                    android:text="@string/ot_save"
                    android:textColor="@color/black"
                    android:textSize="@dimen/small_text_size" />
            </LinearLayout>

            <View style="@style/line3" />

            <LinearLayout style="@style/noraml_item" >

                <TextView
                    style="@style/user_info_item_tv"
                    android:text="@string/ot_info_title" />

                <TextView
                    android:id="@+id/info_title"
                    style="@style/user_info_item_ed"
                    android:hint="@string/ot_info_choose_title" />

                <ImageView
                    style="@style/user_info_item_iv"
                    android:visibility="visible" />
            </LinearLayout>

            <View style="@style/line3" />

            <LinearLayout style="@style/noraml_item_mul" >

                <TextView
                    style="@style/user_info_item_tv"
                    android:text="@string/ot_info_description" />

                <EditText
                    android:id="@+id/info_description"
                    style="@style/user_info_item_ed"
                    android:hint="@string/ot_info_input_description" />

                <ImageView
                    style="@style/user_info_item_iv"
                    android:visibility="invisible" />
            </LinearLayout>

            <View style="@style/line3" />
        </LinearLayout>
    </com.me.resume.views.CommScrollView>

</RelativeLayout>