<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/white"
    android:orientation="vertical"
    android:fitsSystemWindows="true">

    <EditText
        android:id="@+id/input_share"
        android:layout_width="match_parent"
        android:layout_height="180dip"
        android:layout_margin="10dip"
        android:background="@drawable/editbox"
        android:gravity="left"
        android:singleLine="false"
        android:hint="@string/item_text8"
        android:lineSpacingExtra="3dip"
        android:imeOptions="actionDone" />
    
     <RadioGroup
          android:id="@+id/rg_status"
          android:layout_width="match_parent"
          android:layout_height="wrap_content"
          android:layout_marginLeft="10dip"
          android:orientation="horizontal" >

          <RadioButton
              android:id="@+id/ispublic"
              style="@style/user_info_item_radio"
              android:checked="true"
              android:text="@string/item_share_status1" >
          </RadioButton>

          <RadioButton
              android:id="@+id/isprivate"
              style="@style/user_info_item_radio"
              android:layout_marginLeft="20dip"
              android:text="@string/item_share_status2" >
          </RadioButton>
      </RadioGroup>

     <LinearLayout
         android:layout_width="match_parent"
         android:layout_height="40dip"
         android:layout_marginTop="@dimen/margin_16"
         android:orientation="horizontal" >

         <TextView
             android:layout_width="match_parent"
             android:layout_height="match_parent"
             android:layout_marginBottom="5dip"
             android:layout_weight="1"
             android:gravity="left|center"
             android:paddingLeft="@dimen/margin_10"
             android:paddingRight="@dimen/margin_10"
             android:text="@string/item_text81"
             android:textColor="@color/grey_10"
             android:textSize="@dimen/home_cover_text_size" />

         <Button
             android:id="@+id/submit_btn"
             style="@style/button_menu"
             android:layout_width="match_parent"
             android:layout_height="34dip"
             android:layout_weight="2"
             android:text="@string/action_submit"
             android:visibility="visible" />
     </LinearLayout>

</LinearLayout>